--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -214,6 +214,55 @@
           </a>
         </ul>
       </ul>
+
+      <ul class="sidebar-borders menu">
+        <a
+          [routerLink]="'/review/review-page'"
+          (click)="setCurrentSubItem('Review Page')"
+        >
+          <li
+            (click)="setCurrentItem('Review Page')"
+            [class.active]="currentItem === 'Review Page'"
+            class="menu_item"
+          >
+            <div>
+              <img src="../../../assets/review-img-b.png" />
+              <img src="../../../assets/review-img-w.png" />
+            </div>
+            <span>Review</span>
+          </li>
+        </a>
+
+        <ul *ngIf="currentItem === 'Review Page'" class="sub_menu">
+          <a [routerLink]="'/review/review-page'">
+            <li
+              (click)="setCurrentSubItem('Review Page')"
+              [class.active]="currentSubItem === 'Review Page'"
+              class="sub_menu_item"
+            >
+              <img
+                src="../../../assets/review-1.png"
+                style="height: 20px; width: 20px; object-fit: contain"
+              />
+              <span>Review Page</span>
+            </li>
+          </a>
+          <a [routerLink]="'/review/my-reviews'">
+            <li
+              (click)="setCurrentSubItem('My Reviews')"
+              [class.active]="currentSubItem === 'My Reviews'"
+              class="sub_menu_item"
+            >
+              <img
+                src="../../../assets/review-2.png"
+                style="height: 20px; width: 20px; object-fit: contain"
+              />
+              <span>My Reviews</span>
+            </li>
+          </a>
+        </ul>
+      </ul>
+
       <ul class="sidebar-borders menu">
         <a [routerLink]="'/settings'" [queryParams]="{ tab: 'SMS Settings' }">
           <li
