--- a/src/app/screens/bot-settings/bot-settings.component.html
+++ b/src/app/screens/bot-settings/bot-settings.component.html
@@ -97,11 +97,12 @@
                   <label
                     class="switch_box"
                     [class.active]="booking_confirmation"
-                    (click)="bookingConfirmation()"
                   >
                     <input
                       type="checkbox"
                       [class.active]="booking_confirmation"
+                      (change)="bookingConfirmation()"
+                      [checked]="booking_confirmation"
                     />
                     <span
                       class="slider"
@@ -189,12 +190,13 @@
                   style="display: flex; align-items: center; gap: 15px"
                   [class.active]="track_driver_msg"
                 >
-                  <label
-                    class="switch_box"
-                    (click)="trackDriverMsg()"
-                    [class.active]="track_driver_msg"
-                  >
-                    <input type="checkbox" [class.active]="track_driver_msg" />
+                  <label class="switch_box" [class.active]="track_driver_msg">
+                    <input
+                      type="checkbox"
+                      [class.active]="track_driver_msg"
+                      (change)="trackDriverMsg()"
+                      [checked]="track_driver_msg"
+                    />
                     <span
                       class="slider"
                       [class.active]="track_driver_msg"
@@ -234,14 +236,12 @@
                   style="display: flex; align-items: center; gap: 15px"
                   [class.active]="arrived_driver_msg"
                 >
-                  <label
-                    class="switch_box"
-                    (click)="arrivedDriverMsg()"
-                    [class.active]="arrived_driver_msg"
-                  >
+                  <label class="switch_box" [class.active]="arrived_driver_msg">
                     <input
                       type="checkbox"
                       [class.active]="arrived_driver_msg"
+                      (change)="arrivedDriverMsg()"
+                      [checked]="arrived_driver_msg"
                     />
                     <span
                       class="slider"
