--- a/src/app/screens/qr-stats/qr-stats.component.html
+++ b/src/app/screens/qr-stats/qr-stats.component.html
@@ -27,7 +27,7 @@
           />
           <div>
             <p>Total Scans</p>
-            <p>5,423</p>
+            <p>{{ stats.scanData.length }}</p>
             <p>
               <span>
                 <svg
