--- a/src/app/screens/my-reviews/my-reviews.component.css
+++ b/src/app/screens/my-reviews/my-reviews.component.css
@@ -15,7 +15,7 @@ main {
   justify-content: space-between;
   flex-wrap: wrap;
   gap: 10px;
-  padding: 10px;
+  padding: 10px 20px;
   border-radius: 10px;
   background: #edefef;
   margin-bottom: 20px;
@@ -28,6 +28,7 @@ main {
   gap: 15px;
   background: white;
   border: 1px solid lightgray;
+  border-radius: 10px;
 }
 
 .filter {
