--- a/src/app/screens/qr-page/qr-page.component.html
+++ b/src/app/screens/qr-page/qr-page.component.html
@@ -3675,6 +3675,11 @@
           [backgroundOptions]="{ color: '#fff' }"
           [image]="''"
           [imageOptions]="{ crossOrigin: 'anonymous', margin: 10 }"
+          [qrOptions]="{
+            typeNumber: typeNum,
+            mode: 'Byte',
+            errorCorrectionLevel: 'Q'
+          }"
         >
         </ngx-qrcode-styling>
         <div
@@ -3789,11 +3794,11 @@
 
   <!-- Content for Smart Locations QR -->
   <div *ngIf="activeButton === 'smart'">
-    <!-- <h2 class="qr-sec">
-      <img height="15px" width="15px" src="../../../assets/info-icon.png" /> Set
-      Up Your Smart Location QR
+    <h2 class="qr-sec" *ngIf="showUniversalQrGenerator">
+      Set Up Your Smart Location QR
+      <img height="25px" width="25px" src="../../../assets/warning.png" />
     </h2>
-    <div class="note-banner">
+    <!-- <div class="note-banner">
       <strong
         ><img src="../../../assets/info-icon.png" /> Important Note:
       </strong>
@@ -3964,6 +3969,11 @@
             [backgroundOptions]="{ color: '#fff' }"
             [image]="''"
             [imageOptions]="{ crossOrigin: 'anonymous', margin: 10 }"
+            [qrOptions]="{
+              typeNumber: typeNum,
+              mode: 'Byte',
+              errorCorrectionLevel: 'Q'
+            }"
           >
           </ngx-qrcode-styling>
           <div
@@ -4416,31 +4426,88 @@
               <div class="item-detail-r-1">
                 <div class="r-1-1">
                   <div style="display: flex; gap: 15px">
-                    <p style="white-space: nowrap">
+                    <p
+                      style="
+                        white-space: nowrap;
+                        display: flex;
+                        align-items: center;
+                      "
+                    >
                       <span>Created: </span
                       >{{
                         filteredQrCodes[i].createdAt | date : "MMM d, y, h:mm a"
                       }}
                     </p>
                     <div
-                      style="display: flex; align-items: center; gap: 5px"
+                      style="
+                        display: flex;
+                        align-items: center;
+                        gap: 5px;
+                        width: 290px;
+                        height: 40px;
+                      "
                       *ngIf="item.type == 'location'"
                     >
-                      <span
-                        ><p
-                          style="
-                            white-space: nowrap;
-                            text-overflow: ellipsis;
-                            overflow: hidden;
-                            font-size: 12px;
-                            background: white;
-                            padding: 5px;
-                            box-shadow: 0 0 10px lightgray;
-                          "
-                        >
-                          {{ activeQrDetails?.recordWithoutPublicId[0].url }}
-                        </p></span
+                      <div
+                        style="
+                          box-shadow: 0 0 10px lightgrey;
+                          background: white;
+                          border-radius: 6px;
+                          display: flex;
+                          align-items: center;
+                          gap: 10px;
+                          position: absolute;
+                          right: 162px;
+                        "
                       >
+                        <span
+                          ><p
+                            style="
+                              white-space: nowrap;
+                              text-overflow: ellipsis;
+                              overflow: hidden;
+                              font-size: 12px;
+
+                              padding: 5px;
+
+                              height: 40px;
+                              display: flex;
+                              align-items: center;
+                              border-radius: 6px;
+                            "
+                          >
+                            {{ activeQrDetails?.recordWithoutPublicId[0].url }}
+                          </p></span
+                        >
+                        <button
+                          class="r-1-1-1-copy"
+                          style="
+                            background: transparent;
+                            box-shadow: none;
+                            position: relative;
+                            z-index: 10;
+                            height: 40px;
+                            padding: 10px;
+                          "
+                          (click)="copyToClipboard()"
+                        >
+                          <svg
+                            width="18"
+                            height="19"
+                            viewBox="0 0 18 19"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                          >
+                            <path
+                              d="M14.1625 7.475H16.1875C16.7467 7.475 17.2 7.92831 17.2 8.4875L17.2 15.6C17.2 16.7046 16.3046 17.6 15.2 17.6L8.0875 17.6C7.52831 17.6 7.075 17.1467 7.075 16.5875V14.5625M9.1 1.4L3.025 1.4C1.90662 1.4 1 2.30662 1 3.425L1 9.5C1 10.6184 1.90662 11.525 3.025 11.525L9.1 11.525C10.2184 11.525 11.125 10.6184 11.125 9.5L11.125 3.425C11.125 2.30663 10.2184 1.4 9.1 1.4Z"
+                              stroke="black"
+                              stroke-width="1.5"
+                              stroke-linecap="round"
+                            />
+                          </svg>
+                          <!-- Copy Link -->
+                        </button>
+                      </div>
                     </div>
                   </div>
                   <div class="r-1-1-1" *ngIf="item.type == 'text'">
@@ -4727,7 +4794,7 @@
                   </span>
 
                   <div>
-                    <p>1,124</p>
+                    <p>{{ activeQrDetails?.qrScannedCount }}</p>
                     <span>Total Scans </span>
                   </div>
                   <div>
