--- a/src/app/screens/review-page/review-page.component.css
+++ b/src/app/screens/review-page/review-page.component.css
@@ -28,7 +28,7 @@ main {
 
 .main {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   justify-content: space-between;
   width: 100%;
 }
@@ -36,6 +36,7 @@ main {
 .preview {
   height: 800px;
   position: relative;
+  scale: 0.7;
 }
 
 .mobile-con {
@@ -59,6 +60,8 @@ main {
   border-radius: 20px;
   background: #fff;
   box-shadow: 0px 4px 20px 0px rgba(112, 144, 128, 0.2);
+  /* height: 80vh; */
+  overflow: scroll;
 }
 
 .settings-heading {
@@ -167,13 +170,13 @@ main {
 .cover-preview {
   width: 100%;
   height: 200px;
-  background: #b58a8a;
+  background: white;
   display: flex;
   align-items: center;
   justify-content: center;
   border-top-right-radius: 50px;
   border-top-left-radius: 50px;
-  padding-top: 20px;
+  /* padding-top: 20px; */
   position: relative;
   top: 17px;
 }
@@ -209,4 +212,20 @@ main {
   left: 50%;
   transform: translateX(-50%);
   top: 150px;
+}
+
+.cover-hover {
+  visibility: hidden;
+}
+
+.cover-preview:hover .cover-hover {
+  visibility: visible;
+}
+
+.profile-hover {
+  visibility: hidden;
+}
+
+.profile-img-preview:hover .profile-hover {
+  visibility: visible;
 }
