--- a/src/app/screens/review-page/review-page.component.html
+++ b/src/app/screens/review-page/review-page.component.html
@@ -1,5 +1,36 @@
 <main>
-  <div class="heading">Review Page</div>
+  <div class="heading">
+    Review Page
+    <button
+      style="
+        display: flex;
+        /* height: 50px; */
+        padding: 10px 20px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        align-self: stretch;
+
+        border-radius: 8px;
+        border: none;
+        background: linear-gradient(270deg, #2ebc96 0%, #1a9096 100%);
+
+        color: #fff;
+
+        /* Texi */
+        font-family: Nunito;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        letter-spacing: 0.54px;
+      "
+      (click)="isEditable = !isEditable"
+    >
+      Edit Page
+    </button>
+  </div>
 
   <div class="main">
     <div class="settings">
@@ -10,7 +41,12 @@
             <strong>Title</strong>
             <p>{{ title.length }}/25</p>
           </div>
-          <input [(ngModel)]="title" placeholder="How was your experience" />
+          <input
+            [disabled]="!isEditable"
+            [(ngModel)]="title"
+            placeholder="How was your experience"
+            maxlength="25"
+          />
         </div>
 
         <div class="setting">
@@ -19,8 +55,10 @@
             <p>{{ description.length }}/60</p>
           </div>
           <input
+            [disabled]="!isEditable"
             [(ngModel)]="description"
             placeholder="We’d be glad for a review, please select stars below"
+            maxlength="60"
           />
         </div>
 
@@ -29,6 +67,7 @@
             <strong>Profile</strong>
           </div>
           <input
+            [disabled]="!isEditable"
             style="display: none"
             type="file"
             id="profile-img"
@@ -37,7 +76,11 @@
             accept="image/*"
           />
           <label for="profile-img">
-            <!-- <img src="../../../assets/input-img.png" /> -->
+            <img
+              style="width: 70%"
+              *ngIf="!profilePreview"
+              src="../../../assets/dummy-img.png"
+            />
             <img
               [src]="profilePreview"
               *ngIf="profilePreview"
@@ -51,6 +94,7 @@
             <strong>Cover Photo</strong>
           </div>
           <input
+            [disabled]="!isEditable"
             style="display: none"
             type="file"
             id="cover-img"
@@ -59,7 +103,11 @@
             accept="image/*"
           />
           <label for="cover-img">
-            <!-- <img src="../../../assets/input-img.png" /> -->
+            <img
+              style="width: 70%"
+              *ngIf="!coverPreview"
+              src="../../../assets/dummy-img.png"
+            />
             <img
               [src]="coverPreview"
               *ngIf="coverPreview"
@@ -72,6 +120,7 @@
             style="
               display: flex;
               /* height: 50px; */
+              width: 100%;
               padding: 10px 20px;
               flex-direction: column;
               justify-content: center;
@@ -80,6 +129,7 @@
               align-self: stretch;
 
               border-radius: 8px;
+              border: none;
               background: linear-gradient(270deg, #2ebc96 0%, #1a9096 100%);
 
               color: #fff;
@@ -99,82 +149,138 @@
         </div>
       </div>
     </div>
-    <div class="preview">
-      <div class="preview-con">
-        <div class="preview-imgs-con">
-          <div class="cover-preview" style="overflow: hidden">
-            <img
-              [src]="coverPreview"
-              *ngIf="coverPreview"
-              style="width: 100%"
-            />
-          </div>
-          <div class="profile-img-preview" style="overflow: hidden">
-            <img
-              [src]="profilePreview"
-              *ngIf="profilePreview"
-              style="width: 100%"
-            />
-          </div>
-          <p>{{ currentUser.user_name }}</p>
-        </div>
-        <div>
-          <div
-            style="
-              display: flex;
-              flex-direction: column;
-              gap: 10px;
-              align-items: center;
-              justify-content: center;
-              position: relative;
-              top: 80px;
-            "
-          >
-            <p
+    <div
+      style="
+        display: flex;
+        justify-content: center;
+        align-items: start;
+        flex: 1;
+      "
+    >
+      <div style="width: 353px; transform: translateY(-20%)" class="preview">
+        <div class="preview-con">
+          <div class="preview-imgs-con">
+            <label
+              for="cover-img"
+              class="cover-preview"
+              style="overflow: hidden"
+            >
+              <img
+                style="width: 100%"
+                *ngIf="!coverPreview"
+                src="../../../assets/default-cover.png"
+              />
+              <img
+                src="../../../assets/cover-hover.png"
+                style="width: 100%; position: absolute"
+                class="cover-hover"
+              />
+              <img
+                [src]="coverPreview"
+                *ngIf="coverPreview"
+                style="width: 100%"
+              />
+            </label>
+            <label
+              class="profile-img-preview"
               style="
-                color: #030303;
-                text-align: center;
-                font-family: Poppins;
-                font-size: 22.163px;
-                font-style: normal;
-                font-weight: 600;
-                line-height: normal;
-                letter-spacing: 0.665px;
+                overflow: hidden;
+                background: white;
+                box-shadow: 0 0 10px lightgray;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+              "
+              for="profile-img"
+            >
+              <img
+                [src]="profilePreview"
+                *ngIf="profilePreview"
+                style="width: 100%"
+              />
+              <img
+                src="../../../assets/profile-hover.png"
+                style="position: absolute; width: 100%"
+                class="profile-hover"
+              />
+              <img
+                *ngIf="!profilePreview"
+                style="width: 50%"
+                src="../../../assets/texi-msg-logo.png"
+              />
+            </label>
+            <p>{{ currentUser.user_name }}</p>
+          </div>
+          <div>
+            <div
+              style="
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+                align-items: center;
+                justify-content: center;
+                position: relative;
+                top: 72px;
               "
             >
-              {{ previewTitle }}
-            </p>
-            <p
+              <p
+                style="
+                  color: #030303;
+                  text-align: center;
+                  font-family: Poppins;
+                  font-size: 22.163px;
+                  font-style: normal;
+                  font-weight: 600;
+                  line-height: normal;
+                  letter-spacing: 0.665px;
+                  width: 200px;
+                  overflow: hidden;
+                  /* text-overflow: ellipsis; */
+                  white-space: wrap;
+                "
+              >
+                {{ previewTitle }}
+              </p>
+              <p
+                style="
+                  color: #636364;
+                  text-align: center;
+                  font-family: Poppins;
+                  font-size: 16.323px;
+                  font-style: normal;
+                  font-weight: 500;
+                  line-height: normal;
+                  letter-spacing: 0.49px;
+                  overflow: hidden;
+                  text-overflow: ellipsis;
+                  overflow: hidden;
+                  width: 200px;
+                  white-space: wrap;
+                "
+              >
+                {{ previewDescription }}
+              </p>
+            </div>
+            <div
               style="
-                color: #636364;
-                text-align: center;
-                font-family: Poppins;
-                font-size: 16.323px;
-                font-style: normal;
-                font-weight: 500;
-                line-height: normal;
-                letter-spacing: 0.49px;
+                width: 75%;
+                position: absolute;
+                left: 50%;
+                transform: translateX(-50%);
+                bottom: 30px;
               "
             >
-              {{ previewDescription }}
-            </p>
-          </div>
-          <div
-            style="
-              width: 100%;
-              position: absolute;
-              left: 50%;
-              transform: translateX(-50%);
-              bottom: 0;
-            "
-          >
-            <img style="width: 100%" src="../../../assets/Rating section.png" />
+              <img
+                style="width: 100%"
+                src="../../../assets/Rating section.png"
+              />
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="mobile-con">
-        <img src="../../../assets/mobile-frame.png" />
+        <div class="mobile-con">
+          <img src="../../../assets/mobile-frame.png" />
+        </div>
       </div>
     </div>
   </div>
