--- a/src/app/screens/review-page/review-page.component.html
+++ b/src/app/screens/review-page/review-page.component.html
@@ -1,38 +1,190 @@
 <main>
   <div class="heading">
     Review Page
-    <button
-      style="
-        display: flex;
-        /* height: 50px; */
-        padding: 10px 20px;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 10px;
-        align-self: stretch;
+    <div style="display: flex; align-items: center; gap: 10px">
+      <div class="toggle-field">
+        <div
+          style="display: flex; align-items: center; gap: 15px"
+          [class.active]="reviewEnable"
+        >
+          <label class="switch_box" [class.active]="reviewEnable">
+            <input
+              type="checkbox"
+              (change)="reviewEnable = !reviewEnable; cancelEdit()"
+              [class.active]="reviewEnable"
+            />
+            <span class="slider" [class.active]="reviewEnable"></span>
+          </label>
+        </div>
+        <p>Review Enable / Disable</p>
+      </div>
 
-        border-radius: 8px;
-        border: none;
-        background: linear-gradient(270deg, #2ebc96 0%, #1a9096 100%);
+      <button
+        style="
+          display: flex;
+          /* height: 50px; */
+          padding: 10px 20px;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          gap: 10px;
+          align-self: stretch;
 
-        color: #fff;
+          border-radius: 8px;
+          border: none;
+          background: linear-gradient(270deg, #2ebc96 0%, #1a9096 100%);
 
-        /* Texi */
-        font-family: Nunito;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: normal;
-        letter-spacing: 0.54px;
-      "
-      (click)="isEditable = !isEditable"
-    >
-      Edit Page
-    </button>
+          color: #fff;
+
+          /* Texi */
+          font-family: Nunito;
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: normal;
+          letter-spacing: 0.54px;
+        "
+        (click)="isEditable = !isEditable"
+        *ngIf="reviewEnable && !isEditable"
+      >
+        Edit Page
+      </button>
+      <div
+        *ngIf="reviewEnable && isEditable"
+        style="display: flex; align-items: center; gap: 10px"
+      >
+        <button
+          style="
+            display: flex;
+            /* height: 50px; */
+            padding: 10px 20px;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+            align-self: stretch;
+
+            border-radius: 8px;
+            border: none;
+            background: linear-gradient(270deg, #2ebc96 0%, #1a9096 100%);
+
+            color: #fff;
+
+            /* Texi */
+            font-family: Nunito;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: normal;
+            letter-spacing: 0.54px;
+          "
+          (click)="updateDetails()"
+        >
+          Save
+        </button>
+        <button
+          style="
+            display: flex;
+            /* height: 50px; */
+            padding: 10px 20px;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+            align-self: stretch;
+
+            border-radius: 8px;
+            border: none;
+            background: linear-gradient(270deg, #2ebc96 0%, #1a9096 100%);
+
+            color: #fff;
+
+            /* Texi */
+            font-family: Nunito;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: normal;
+            letter-spacing: 0.54px;
+          "
+          (click)="cancelEdit()"
+        >
+          Cancel
+        </button>
+      </div>
+    </div>
   </div>
 
-  <div class="main">
+  <div
+    *ngIf="!reviewEnable"
+    style="display: flex; align-items: center; gap: 15px"
+  >
+    <div
+      style="
+        padding: 10px 20px;
+        box-shadow: 0 0 10px lightgray;
+        width: 58%;
+        border-radius: 20px;
+      "
+    >
+      <div>
+        <h3 class="r-b-h">What is the Review Template?</h3>
+        <p class="r-b-p">
+          Your Review Template helps you collect valuable feedback from your
+          customers in a simple, user-friendly way. Once enabled, it becomes
+          your branded review page — complete with your logo, custom banner, and
+          personalized title and description.
+        </p>
+      </div>
+
+      <div>
+        <h3 class="r-b-h">How It Works:</h3>
+        <strong class="r-b-s">1-3 Stars:</strong>
+        <p class="r-b-p">
+          We understand negative feedback is sensitive. For low ratings, the
+          review message box is disabled to avoid collecting harsh comments
+          directly. You can handle these cases manually.
+        </p>
+        <strong class="r-b-s">4-5 Stars:</strong>
+        <p class="r-b-p">
+          Happy customers? Great! The message box opens, allowing them to leave
+          a comment. Once submitted, they are redirected to your Google Reviews
+          page — helping you build public trust and credibility.
+        </p>
+      </div>
+
+      <div>
+        <h3 class="r-b-h">What You Can Edit:</h3>
+        <ul class="r-b-p">
+          <li>Title: Add a custom message like “How was your ride?”</li>
+          <li>Description: Give users context or instructions</li>
+          <li>Logo: Upload your brand's profile image</li>
+          <li>Banner: Upload a custom banner for a personalized look</li>
+        </ul>
+      </div>
+
+      <div>
+        <h3 class="r-b-h">How to Activate</h3>
+        <p class="r-b-p">
+          Use the toggle in the header to enable your review template. Once it's
+          on, the right side will show a live preview and the left side will
+          allow you to customize your content easily.
+        </p>
+      </div>
+    </div>
+    <div
+      style="
+        padding: 20px;
+        box-shadow: 0 0 10px lightgray;
+        width: 58%;
+        border-radius: 20px;
+      "
+    >
+      <img style="width: 100%" src="../../../assets/review-banner.png" />
+    </div>
+  </div>
+
+  <div *ngIf="reviewEnable" class="main">
     <div class="settings">
       <div class="settings-heading">Edit Page</div>
       <div class="settings-main">
@@ -44,8 +196,10 @@
           <input
             [disabled]="!isEditable"
             [(ngModel)]="title"
+            (ngModelChange)="liveTitle()"
             placeholder="How was your experience"
             maxlength="25"
+            [ngStyle]="{ border: isEditable ? '2px solid green' : 'none' }"
           />
         </div>
 
@@ -57,8 +211,10 @@
           <input
             [disabled]="!isEditable"
             [(ngModel)]="description"
+            (ngModelChange)="liveDescription()"
             placeholder="We’d be glad for a review, please select stars below"
             maxlength="60"
+            [ngStyle]="{ border: isEditable ? '2px solid green' : 'none' }"
           />
         </div>
 
@@ -75,7 +231,10 @@
             (change)="onProfileSelected($event)"
             accept="image/*"
           />
-          <label for="profile-img">
+          <label
+            for="profile-img"
+            [ngStyle]="{ border: isEditable ? '2px solid green' : 'none' }"
+          >
             <img
               style="width: 70%"
               *ngIf="!profilePreview"
@@ -102,7 +261,10 @@
             (change)="onCoverSelected($event)"
             accept="image/*"
           />
-          <label for="cover-img">
+          <label
+            for="cover-img"
+            [ngStyle]="{ border: isEditable ? '2px solid green' : 'none' }"
+          >
             <img
               style="width: 70%"
               *ngIf="!coverPreview"
@@ -116,7 +278,7 @@
           </label>
         </div>
         <div style="display: flex; justify-content: center">
-          <button
+          <!-- <button
             style="
               display: flex;
               /* height: 50px; */
@@ -145,7 +307,7 @@
             (click)="updateDetails()"
           >
             Save Changes
-          </button>
+          </button> -->
         </div>
       </div>
     </div>
@@ -157,7 +319,8 @@
         flex: 1;
       "
     >
-      <div style="width: 353px; transform: translateY(-20%)" class="preview">
+      <!-- <div style="width: 353px; transform: translateY(-12%)" class="preview"> -->
+      <div style="aspect-ratio: 372/759" class="preview">
         <div class="preview-con">
           <div class="preview-imgs-con">
             <label
@@ -209,9 +372,9 @@
                 src="../../../assets/texi-msg-logo.png"
               />
             </label>
-            <p>{{ currentUser.user_name }}</p>
+            <p>{{ currentUser.name }}</p>
           </div>
-          <div>
+          <div style="width: 100%">
             <div
               style="
                 display: flex;
@@ -228,12 +391,12 @@
                   color: #030303;
                   text-align: center;
                   font-family: Poppins;
-                  font-size: 22.163px;
+                  font-size: 14.163px;
                   font-style: normal;
                   font-weight: 600;
                   line-height: normal;
                   letter-spacing: 0.665px;
-                  width: 200px;
+                  width: 90%;
                   overflow: hidden;
                   /* text-overflow: ellipsis; */
                   white-space: wrap;
@@ -246,7 +409,7 @@
                   color: #636364;
                   text-align: center;
                   font-family: Poppins;
-                  font-size: 16.323px;
+                  font-size: 12.323px;
                   font-style: normal;
                   font-weight: 500;
                   line-height: normal;
@@ -254,7 +417,7 @@
                   overflow: hidden;
                   text-overflow: ellipsis;
                   overflow: hidden;
-                  width: 200px;
+                  width: 90%;
                   white-space: wrap;
                 "
               >
