--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -277,7 +277,7 @@
             <span>App Settings</span>
           </li>
         </a>
-        <a [routerLink]="'/settings'" [queryParams]="{ tab: 'Profile' }">
+        <!-- <a [routerLink]="'/settings'" [queryParams]="{ tab: 'Profile' }">
           <li
             (click)="setCurrentItem('Profile')"
             [class.active]="currentItem === 'Profile'"
@@ -289,7 +289,7 @@
             </div>
             <span>Profile</span>
           </li>
-        </a>
+        </a> -->
       </ul>
       <ul class="sidebar-borders menu">
         <a [routerLink]="'/'">
