--- a/src/app/screens/qr-page/qr-page.component.css
+++ b/src/app/screens/qr-page/qr-page.component.css
@@ -470,8 +470,8 @@ h2 {
   gap: 15px;
   align-items: center;
   justify-content: space-between;
-  max-width: 1534px;
-  min-width: fit-content;
+  /* max-width: 1534px;
+  min-width: fit-content; */
   padding: 28px 0;
   border-top: 1px solid lightgray;
 }
@@ -569,9 +569,10 @@ h2 {
 
 .qr-table-item-detail {
   padding: 20px 30px;
+  box-sizing: border-box;
   background: #f5f5f5;
-  max-width: 1534px;
-  min-width: 1333px;
+  /* max-width: 1534px;
+  min-width: 1333px; */
   display: flex;
   gap: 60px;
 }
@@ -1538,4 +1539,64 @@ input[type="color"] {
   border: none;
   height: 0;
   width: 0;
+}
+
+.active-btn {
+  border-radius: 23.875px;
+  background: linear-gradient(0deg, #2ebc96 0%, #1a9096 100%);
+  display: flex;
+  height: 50px;
+  width: 50px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 11.938px;
+  color: white;
+  font-size: 16px;
+  border: none;
+}
+
+.page-btn {
+  border-radius: 23.875px;
+
+  display: flex;
+  height: 50px;
+  width: 50px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 11.938px;
+  color: black;
+  font-size: 16px;
+  border: none;
+}
+
+@media (max-width: 1400px) {
+  .qr-table-head {
+    gap: 0;
+  }
+  .qr-table-item-container {
+    width: 100%;
+  }
+  .qr-table-item {
+    width: 100%;
+    gap: 0;
+  }
+  .r-1-1 {
+    width: 70%;
+  }
+  .r-1-2 {
+    flex: 1;
+  }
+
+  .r-1-2 div {
+    width: 100%;
+  }
+
+  .qr-banner {
+    padding: 10px 30px;
+  }
+  .qr-banner p {
+    font-size: 0.9rem;
+  }
 }
