--- a/src/app/screens/qr-stats/qr-stats.component.html
+++ b/src/app/screens/qr-stats/qr-stats.component.html
@@ -116,12 +116,13 @@
         <td>City</td>
         <td>State</td>
         <td>Country</td>
+        <td>Status</td>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let item of stats.scanData">
         <td>{{ item.createdAt | date : "MM/dd/yyyy, h:mm:ss a" }}</td>
-        <td>{{ item.timestamp }}</td>
+        <td>{{ item.scan_id }}</td>
         <td>{{ item.browser }}</td>
         <td>{{ item.browserVersion }}</td>
         <td>{{ item.os }}</td>
@@ -129,6 +130,9 @@
         <td>{{ item.city }}</td>
         <td>{{ item.state }}</td>
         <td>{{ item.country }}</td>
+        <td [ngStyle]="{ color: getStatusColor(item.status) }">
+          {{ item.status }}
+        </td>
       </tr>
     </tbody>
   </table>
